# Jarvis

./: .env.example  .gitignore  CLAUDE.md  SPEC.md  pyproject.toml
.claude/: settings.json
docs/: DECISIONS.md  Jarvis Architecture (offline).html  Jarvis Core Pipeline (offline).html  Jarvis_Core_Spec.md  google-calendar-setup.md  plaid-setup.md
docs/specs/: phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-5b.md  web-cockpit-design.md  web-cockpit-v2.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  controller.ts  index.css  main.tsx  motion.ts  theme.css  types.ts
frontend/src/components/: AgendaBody.tsx  AppShell.tsx  ArcReactorLogo.tsx  ArcRing.tsx  Card.tsx  ChatInput.tsx  Clock.tsx  CompanyPanel.tsx  Feed.tsx  FinanceFigure.tsx  FsModal.tsx  GoalFeedWidget.tsx  GoalsPanel.tsx  HudPanel.tsx  KindIcon.tsx  LiveStocksPanel.tsx  MarkdownBody.tsx  NavBar.tsx  NewsGlobe.tsx  NewsView.tsx  NextNudgeWidget.tsx  PlaceholderWidget.tsx  ShortcutBar.tsx  ShortcutButton.tsx  SidePanel.tsx  Sparkline.tsx  StatusBar.tsx  StockTile.tsx  SuggestionPeek.tsx  SystemPill.tsx  Telemetry.tsx  TickerTape.tsx  WatchlistPanel.tsx  WhyStrip.tsx  countryCentroids.ts
jarvis/: __init__.py  __main__.py  briefing.py  cli.py  config.py  fs_ops.py  orchestrator.py  query.py  redact.py  results.py  selftest.py  service.py
jarvis/api/: __init__.py  app.py  serialize.py  server.py
jarvis/cache/: __init__.py  base.py  sqlite_cache.py
jarvis/calendar/: __init__.py  client.py  oauth.py
jarvis/connectors/: __init__.py  arxiv.py  base.py  caching.py  fundamentals.py  gdelt.py  hn.py  markets.py  news.py
jarvis/finance/: __init__.py  categorize.py  engine.py  money.py  qa.py  transaction.py
jarvis/finance/sources/: __init__.py  base.py  csv_source.py  ofx_source.py  plaid_source.py
jarvis/knowledge/: __init__.py  answerer.py  pipeline.py  router.py
jarvis/llm/: __init__.py  client.py  embedder.py
jarvis/memory/: __init__.py  migrate.py  record.py  store.py
jarvis/proactivity/: __init__.py  bandit.py  candidate.py  context.py  features.py  feedback.py  generators.py  goal_terms.py  phrase.py  rank.py  reflect.py  research_rank.py  scheduler.py  suggest.py  trigger.py  trigger_weights.py  user_model.py
jarvis/router/: __init__.py  model_router.py
jarvis/signals/: __init__.py  event.py  log.py
jarvis/stores/: __init__.py  chroma_store.py  sqlite_store.py  structured.py  vector.py
jarvis/ui/: __init__.py  app.py  controller.py  feed.py
jarvis/voice/: __init__.py  audio.py  loop.py  stt.py  tts.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_answerer.py  test_api.py  test_arxiv_connector.py  test_bandit.py  test_boundaries.py  test_briefing.py  test_caching_connector.py  test_calendar.py  test_candidate_generators.py  test_categorize.py  test_cli.py  test_config.py  test_connectors_fundamentals.py  test_connectors_gdelt.py  test_connectors_hn.py  test_connectors_markets.py  test_connectors_news.py  test_feedback.py  test_finance_engine.py  test_finance_money.py  test_finance_qa.py  test_finance_sources.py  test_finance_store.py  test_fs_ops.py  test_goal_feed_service.py  test_goal_terms.py  test_goals.py  test_llm.py  test_main.py  test_memory_store.py  test_migration.py  test_model_router.py  test_orchestrator.py  test_pipeline.py  test_plaid_source.py  test_proactivity_features.py  test_proactivity_store.py  test_project_deepdive.py  test_query.py  (+23 more)
