[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.0.0"
description = "Local-first personal AI assistant (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "ollama>=0.4",
    "chromadb>=0.5",
    "httpx>=0.27",
    # Calendar (Phase 2): the 3 official Google libs, confined to jarvis/calendar/ (boundary-guarded).
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: needs a running Ollama (deselect with -m 'not integration')",
]
