[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.0.0"
description = "Local-first personal AI assistant (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "ollama>=0.4",
    "chromadb>=0.5",
    "httpx>=0.27",
    # Calendar (Phase 2): the 3 official Google libs, confined to jarvis/calendar/ (boundary-guarded).
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    # UI (Phase 3): Flet desktop GUI, confined to jarvis/ui/ (boundary-guarded). Pinned <0.90 (pre-1.0).
    "flet>=0.85,<0.90",
    # Voice (Phase 3): local STT + mic capture + TTS, confined to jarvis/voice/ (boundary-guarded).
    "faster-whisper>=1.2",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "piper-tts>=1.2",
    # Finance (Phase 4): local OFX/QFX import (zero-dep, stdlib-only), confined to jarvis/finance/.
    "ofxtools>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: needs a running Ollama (deselect with -m 'not integration')",
]
